Configure dynamic CORS allowed origins via properties